fixed the size of dark mode button

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -33,7 +33,7 @@ header p {
   
 #menu {
     display: inline-block;
-    font-size: 9vw;
+    font-size: 44px;
     text-decoration: none;
     margin-right: 3vw;
     color: white;
@@ -187,8 +187,8 @@ header p {
 
 .dark-mode {
   position: absolute;
-  right: 9vw;
-  top: 5vw;
+  right: 11vw;
+  top: 3vw;
 }
 
 nav li:last-child {
@@ -208,8 +208,8 @@ nav li:last-child {
 .switch {
   position: relative;
   display: inline-block;
-  width: 28px;
-  height: 15px;
+  width: 60px;
+  height: 34px;
   margin-left: 2vw;
 }
 
@@ -236,10 +236,10 @@ nav li:last-child {
 .slider:before {
   position: absolute;
   content: "";
-  height: 10px;
-  width: 10px;
-  left: 3px;
-  bottom: 3px;
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
   background-color: white;
   -webkit-transition: .4s;
   transition: .4s;
